# Project_skull

./: .gitignore  README.md  README_en.md  fineweb_dw.py  project_skull_framework.md  pyproject.toml  requirements.txt
configs/data/: corpora.yaml  tokenizer_zh_en.yaml
configs/eval/: default_eval.yaml
configs/model/: skull_150m.yaml  skull_1b.yaml  skull_300m.yaml
configs/train/: cpt_150m.yaml  pretrain_150m.yaml  sft_150m.yaml
project_skull.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: append_datasets.py  build_bins.py  build_bins_multishard.py  build_clean_corpus.py  build_mix_manifest.py  clean_keep_english_punct.py  count_tokens.py  export_checkpoint.py  launch_cpt.py  launch_pretrain.py  launch_sft.py  merge_corpus.py  s2t.py  test_tokenizer.py  train_tokenizer.py  train_tokenizer_v2.py  train_tokenizer_v3.py  train_tokenizer_v4.py
skull/: __init__.py
skull/cli/: cpt.py  eval.py  pretrain.py  sample.py  sft.py  utils.py
skull/data/: __init__.py  block_bin_dataset.py  cleaning.py  collators.py  manifest.py  manifests.py  multi_bin_dataset.py  packed_sft_dataset.py
skull/eval/: __init__.py  benchmark_runner.py  generation.py  perplexity.py  prompts.py
skull/model/: __init__.py  config.py  mlp.py  model_gpt.py  rope.py
skull/tokenization/: __init__.py  sentencepiece_wrapper.py  tokenizer.py  tokenizer_old.py
skull/train/: amp.py  (+7 more)
tests/: test_bin_dataset.py  test_build_bins_multishard.py  test_device_fallback.py  test_model_forward.py  test_multi_bin_dataset.py  test_pretrain_error_handler.py  test_sft_dataset.py  test_tokenizer.py
(+5 files in other folders)
